Add `getUser`
